--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # bluetooth name
 CONFIG_ZMK_KEYBOARD_NAME="hachiman"
+CONFIG_BT_CTLR_PHY_2M=n
 
 # mouse
 CONFIG_ZMK_MOUSE=y
+
